# Forge

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Libraries.cmake  README.md  Shaders.cmake  Source.cmake
Resources/Meshes/Sponza/: Attribution.txt  Sponza.gltf  arch_a.dds  arch_base_a.dds  arch_base_n.dds  arch_base_rm.dds  arch_n.dds  arch_rm.dds  ceiling_a.dds  ceiling_n.dds  ceiling_rm.dds  chain_a.dds  chain_n.dds  chain_rm.dds  crest_a.dds  crest_n.dds  crest_rm.dds  cubemap.dds  door_window_a.dds  door_window_n.dds  door_window_rm.dds  floor_a.dds  floor_n.dds  floor_rm.dds  flowers_a.dds  flowers_n.dds  flowers_rm.dds  foliage_a.dds  foliage_n.dds  foliage_rm.dds  lion_a.dds  lion_n.dds  lion_rm.dds  pillar_high_a.dds  pillar_high_n.dds  pillar_high_rm.dds  pillar_low_a.dds  pillar_low_n.dds  pillar_low_rm.dds  pot_metal_a.dds  (+28 more)
Resources/Meshes/Viking/: Attribution.txt
Resources/Shaders/: BloomDownsample.frag.spv  BloomUpsample.frag.spv  Composite.frag.spv  Depth.vert.spv  DepthMasked.frag.spv  DepthMasked.vert.spv  Distance.frag.spv  Distance.vert.spv  Forward.frag.spv  Forward.vert.spv  Normal.frag.spv  Normal.vert.spv  SSAO.frag.spv  SSAOBlur.frag.spv  SSRGenerate.frag.spv  Screen.vert.spv  Simple.frag.spv  Simple.vert.spv  Skybox.frag.spv  Tonemap.frag.spv  Triangle.frag.spv  Triangle.vert.spv
Resources/Textures/Skybox/: Attribution.txt  Kloofendal.dds
Resources/Textures/Tony McMapface/: tony_mc_mapface.dds
Shaders/: BloomDownsample.frag  BloomUpsample.frag  Composite.frag  Depth.vert  DepthMasked.frag  DepthMasked.vert  Distance.frag  Distance.vert  Forward.frag  Forward.vert  Lighting.glsl  Masked.glsl  Normal.frag  Normal.vert  RenderQuality.glsl  SSAO.frag  SSAOBlur.frag  SSRGenerate.frag  Screen.vert  Simple.frag  Simple.vert  Skybox.frag  Tonemap.frag  Triangle.frag  Triangle.vert  View.glsl
Source/: ForgeApplication.cpp  ForgeApplication.h  Main.cpp  PCH.h
Source/Core/: Assert.h  Delegate.cpp  Delegate.h  DelegateHandle.cpp  DelegateHandle.h  Features.h  Hash.h  Log.cpp  Log.h  Macros.h  Task.h  Types.h
Source/Core/Containers/: FrameVector.h  GenerationalArray.h  GenerationalArrayHandle.h  ReflectedMap.h  StaticVector.h
Source/Core/Math/: Bounds.cpp  MathUtils.h  Transform.cpp  Transform.h
Source/Core/Memory/: FrameAllocator.cpp  FrameAllocator.h
Source/Graphics/: BlendMode.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  Context.cpp  Context.h  DebugUtils.cpp  DebugUtils.h  DelayedObjectDestroyer.cpp  DelayedObjectDestroyer.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  DynamicDescriptorPool.cpp  DynamicDescriptorPool.h  FrameData.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsResource.cpp  GraphicsResource.h  GraphicsTypes.h  Material.cpp  Material.h  Memory.cpp  Memory.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  (+13 more)
Source/Graphics/Base/: GraphicsContextBase.cpp  GraphicsContextBase.h
Source/Graphics/Passes/Simple/: SimpleRenderPass.cpp  SimpleRenderPass.h  SimpleShader.cpp  SimpleShader.h
Source/Graphics/Shaders/: SimpleShader.cpp  SimpleShader.h
Source/Graphics/Vulkan/: VulkanGraphicsContext.cpp  VulkanGraphicsContext.h
Source/Math/: Bounds.cpp  Bounds.h  MathUtils.h  Transform.cpp  Transform.h
Source/Platform/: IOUtils.cpp  IOUtils.h  InputManager.cpp  InputManager.h  InputTypes.h  MacOSUtils.mm  Midi.cpp  Midi.h  OSUtils.cpp  OSUtils.h  Window.cpp  Window.h
Source/Renderer/: ForwardLighting.cpp  ForwardLighting.h  Frame.cpp  Frame.h  PhongMaterial.cpp  PhongMaterial.h  PhysicallyBasedMaterial.cpp  PhysicallyBasedMaterial.h  RenderSettings.cpp  RenderSettings.h  Renderer.cpp  Renderer.h  SceneRenderInfo.h  SimpleMaterial.cpp  SimpleMaterial.h  UniformData.h  View.cpp  View.h  ViewInfo.cpp  ViewInfo.h
Source/Renderer/Passes/: SceneRenderPass.h
Source/Renderer/Passes/Composite/: CompositePass.cpp  CompositePass.h  CompositeShader.cpp  CompositeShader.h
Source/Renderer/Passes/Depth/: DepthMaskedShader.cpp  DepthMaskedShader.h  DepthPass.cpp  DepthPass.h  DepthShader.cpp  DepthShader.h
Source/Renderer/Passes/Distance/: DistancePass.cpp  DistancePass.h  DistanceShader.cpp  DistanceShader.h
Source/Renderer/Passes/Forward/: ForwardLighting.cpp  ForwardLighting.h  ForwardPass.cpp  ForwardPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h  ForwardShader.cpp  ForwardShader.h  SkyboxShader.cpp  SkyboxShader.h
Source/Renderer/Passes/Normal/: NormalPass.cpp  NormalPass.h  NormalShader.cpp  NormalShader.h
Source/Renderer/Passes/SSAO/: SSAOBlurShader.cpp  SSAOBlurShader.h  SSAOPass.cpp  SSAOPass.h  SSAOShader.cpp  SSAOShader.h
Source/Renderer/Passes/SSR/: SSRApplyShader.cpp  SSRBlurShader.cpp  SSRGenerateShader.cpp  SSRGenerateShader.h  SSRPass.cpp  (+1 more)
Source/Resources/: DDSImage.cpp  DDSImage.h  DDSImageLoader.cpp  DDSImageLoader.h  ForEachResourceType.inl  Image.h  LoadedImage.cpp  LoadedImage.h  MaterialLoader.cpp  MaterialLoader.h  MaterialResourceManager.cpp  MaterialResourceManager.h  MeshLoader.cpp  MeshLoader.h  MeshResourceManager.cpp  MeshResourceManager.h  ResourceContainer.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerBase.cpp  ResourceManagerBase.h  ResourceTypes.cpp  ResourceTypes.h  STBImage.cpp  STBImage.h  STBImageLoader.cpp  STBImageLoader.h  ShaderModuleLoader.cpp  ShaderModuleLoader.h  ShaderModuleResourceManager.cpp  ShaderModuleResourceManager.h  TextureLoader.cpp  TextureLoader.h  TextureResourceManager.cpp  TextureResourceManager.h
Source/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  System.h
Source/Scene/Components/: CameraComponent.h  LightComponent.h  MeshComponent.h  NameComponent.h  OscillatingMovementComponent.h  SkyboxComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Scene/Systems/: CameraSystem.cpp  CameraSystem.h  OscillatingMovementSystem.cpp  OscillatingMovementSystem.h
Source/UI/: UI.cpp  UI.h  UIConfig.h
(+16 files in other folders)
